--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -30,11 +30,10 @@
 
     
     <div class="benefits" role="article">
-		{{ JobDescription }}
+		{{ job_description }}
 		</div>
 		<footer>
       
-			<p>Created by Piotr Wojdalski</p>
 		</footer>
 
 	
