--- a/templates/ac.html.hbs
+++ b/templates/ac.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Salling QR Pathfinder</title>
+	<title>Accounting</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>QR Salling Pathfinder</h1>
+			<h1>IT Support</h1>
 		</header>
 
     
@@ -47,39 +47,27 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
+						<a href="/ac/apc" class="design-name">AP Communication</a>Oliwia Kuberska
 					</li>
 					<li>
-						<a href="/md/index" class="design-name">Master Data</a>Damian Leszczyński
+						<a href="/ac/apdk" class="design-name">AP DK</a>Anna Misior
 					</li>					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
+						<a href="/ac/apndk" class="design-name">AP non DK</a>Justyna Kowalczyk
 					</li>					<li>
-						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
+						<a href="/ac/p2p" class="design-name">P2P</a>Paweł Milewski
 					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
+						<a href="/ac/ar" class="design-name">AR</a>Paweł Strzelec
 					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
+						<a href="/ac/csde" class="design-name">Customer Service DE</a>Paweł Strzelec
 					</li>					<li>
-					</ul>
+						<a href="/ac/glpl" class="design-name">GL PL</a>Hanna Prorok
+					</li>					<li>
+						<a href="/ac/gldk" class="design-name">GL DK</a>Iwona Nowak
+					</li>
+						</ul>
 				</nav>
 			</div>
       
-			<div class="design-archives" id="design-archives">
-				<h3 class="archives">Archives:</h3>
-				<nav role="navigation">
-					<ul>
-						<li class="next">
-							<a href="/220/page1">
-								Next Designs <span class="indicator">&rsaquo;</span>
-							</a>
-						</li>
-						<li class="viewall">
-							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-								View All Designs							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
 
 			
 		</div>
