--- a/templates/ctrl.html.hbs
+++ b/templates/ctrl.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Salling QR Pathfinder</title>
+	<title>Controlling</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>QR Salling Pathfinder</h1>
+			<h1>Controlling</h1>
 		</header>
 
     
@@ -54,11 +54,11 @@
 					</li>					<li>
 						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
 					</li>					<li>
-						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
+						<a href="/ctrl" class="design-name">Controlling</a>Paweł Milewski
 					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
+						<a href="/hra" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
 					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
+						<a href="/hrs" class="design-name">HR Support</a>Kamila Bloch
 					</li>					<li>
 					</ul>
 				</nav>
