--- a/templates/it.html.hbs
+++ b/templates/it.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Salling QR Pathfinder</title>
+	<title>IT Support</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>QR Salling Pathfinder</h1>
+			<h1>IT Support</h1>
 		</header>
 
     
@@ -47,39 +47,30 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
+						<a href="/it/eco" class="design-name">Platform and Cloud Operation</a>Rafał Domagalski
 					</li>
 					<li>
-						<a href="/md/index" class="design-name">Master Data</a>Damian Leszczyński
+						<a href="/it/application" class="design-name">Application Support</a>Rafał Domagalski
 					</li>					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
+						<a href="/it/desktop" class="design-name">Desktop Managment</a>Tomasz Nowak
 					</li>					<li>
-						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
+						<a href="/it/sd" class="design-name">Service Desk</a>Joanna Nazim
 					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
+						<a href="/it/mon" class="design-name">Monitoring</a>Wojciech Niewczas
 					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
+						<a href="/it/bi" class="design-name">Bussines inteligence support</a>Krzysztof Koler
 					</li>					<li>
-					</ul>
+						<a href="/it/npl" class="design-name">Netto PL support</a>Wojciech Niewczas
+					</li>					<li>
+						<a href="/it/rpa" class="design-name">RPA</a>Tomasz Nowak
+					</li>					<li>
+						<a href="/it/change" class="design-name">Change Managment</a>Joanna Nazim
+					</li>					<li>
+						<a href="/it/cctv" class="design-name">CCTV monitoring </a>Krzysztof Koler
+					</li>					</ul>
 				</nav>
 			</div>
       
-			<div class="design-archives" id="design-archives">
-				<h3 class="archives">Archives:</h3>
-				<nav role="navigation">
-					<ul>
-						<li class="next">
-							<a href="/220/page1">
-								Next Designs <span class="indicator">&rsaquo;</span>
-							</a>
-						</li>
-						<li class="viewall">
-							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-								View All Designs							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
 
 			
 		</div>
