--- a/static/it/style.css
+++ b/static/it/style.css
@@ -144,7 +144,7 @@ sub, sup { line-height: 0; }
 	Banner
 -------------------------------------------*/
 [role="banner"] h1 { padding: 1em 0 0; text-transform: uppercase; letter-spacing: 0.1em; font-size: 3.5rem; font-weight: 900; color: #182e4f; visibility: hidden; }
-[role="banner"] h1:before { content: "Salling Group Pathfinder"; visibility: visible; display: block; }
+[role="banner"] h1:before { content: "IT Support"; visibility: visible; display: block; }
 [role="banner"] h1:after { content: "In SSC"; visibility: visible; display: block; color: #aaa; letter-spacing: 0.5em; font-size: 1.4rem; font-weight: normal; margin: 0.5em 0 3em; color: rgba(24, 46, 79, 0.4); }
 
 [role="banner"] h2 { visibility: hidden; display: none; text-transform: uppercase; font-weight: 400; color: rgba(41, 78, 134, 0.5); }
@@ -161,7 +161,7 @@ sub, sup { line-height: 0; }
 /*-------------------------------------------    
     Preamble
 -------------------------------------------*/
-.preamble { background: transparent no-repeat 50% 0; }
+.preamble { background: no-repeat 50% 0; }
 	.preamble h3:after { visibility: visible; content: "A Fashion-Forward Future";  }
 
 
@@ -207,7 +207,7 @@ sub, sup { line-height: 0; }
 			.designer-name:after, footer a:after { height: 1px; }
 
 
-.select:after { content: "Teams & managers"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: transparent no-repeat 50% 0; padding: 2em 0 0; color: #182e4f; visibility: visible; }
+.select:after { content: "Teams & managers"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: no-repeat 50% 0; padding: 2em 0 0; color: #182e4f; visibility: visible; }
 
 .archives, .resources { position: absolute; left: -9999px;  }
 
@@ -216,15 +216,15 @@ sub, sup { line-height: 0; }
 	.design-archives a { display: block; text-indent: 100%; white-space: nowrap; overflow: hidden; }
 
 .next { margin-right: 3em; }
-	.next a { background: transparent no-repeat 10px -56px; width: 43px; height: 37px; }
+	.next a { background: no-repeat 10px -56px; width: 43px; height: 37px; }
 	.next a:hover, .next a:focus { background-position: 10px -138px; }
 
 .previous { margin-right: 3em; }
-	.previous a { background: transparent no-repeat 10px -220px; width: 43px; height: 37px; }
+	.previous a { background: no-repeat 10px -220px; width: 43px; height: 37px; }
 	.previous a:hover, .previous a:focus { background-position: 10px -302px; }
 
 .viewall { margin-left: 1em; }
-	.viewall a { background: transparent no-repeat -56px -55px; width: 39px; height: 39px; }
+	.viewall a { background: no-repeat -56px -55px; width: 39px; height: 39px; }
 	.viewall a:hover, .viewall a:focus { background-position: -56px -137px; }
 
 footer { font-size: 1.3rem; }
@@ -269,13 +269,13 @@ footer { font-size: 1.3rem; }
 		[role="banner"] h1:after { position: absolute; top: 15.7em; right: 30%; }
 		
 		[role="banner"] h2 { display: block; top: 8.1em; width: 3em; left: 75.5%; font-size: 1.9rem; line-height: 1; }
-		[role="banner"] h2:before { visibility: visible; content: "Est. 2003"; display: block; position: fixed; top: -0.1em; bottom: 0; left: -0.5em; right: 0; margin: auto; /*right: 25%;*/ font-weight: 900; font-size: 50rem; color: rgba(0, 0, 0, 0.15); width: 100%; height: 2em; line-height: 1; transform: rotate(-90deg); -ms-transform: rotate(-90deg); /* IE 9 */ -webkit-transform: rotate(-90deg); /* Safari and Chrome */ }
+		[role="banner"] h2:before { visibility: visible; content: "Est. 2003"; display: block; position: fixed; top: -0.1em; bottom: 0; left: -0.5em; right: 0; margin: auto; /*right: 25%;*/ font-weight: 900; font-size: 50rem; color: rgba(0, 0, 0, 0.15); width: 100%; height: 2em; line-height: 1; transform: rotate(-90deg); -ms-transform: rotate(-90deg); /* IE 9 */ -webkit-transform: rotate(-90deg); /* Safari and Chrome */ -webkit-mask-image: url(i/denim-mask2.png); -o-mask-image: url(i/denim-mask2.png); -moz-mask-image: url(i/denim-mask2.png); mask-image: url(i/denim-mask2.png); }
 
 		.summary p:nth-child(2) { background: yellow; position: relative; visibility: hidden; top: 2em; font-size: 1.4rem; }
 
 			.summary p:nth-child(2):before { content: ""; display: block; visibility: visible; position: absolute; right: 21em; top: -0.25em; background: no-repeat -159px -1px; width: 6em; height: 30px; }
 
-			.summary p:nth-child(2):after { content: ""; display: block; visibility: visible; position: absolute; right: 14em; top: -0.25em; background: no-repeat -277px 0; width: 6em; height: 30px; }
+			.summary p:nth-child(2):after { content: ""; display: block; visibility: visible; position: absolute; right: 14em; top: -0.25em; background: transparent url(s/czg.svg) no-repeat -277px 0; width: 6em; height: 30px; }
 
 			.summary p:nth-child(2) a { visibility: visible; background: no-repeat -376px -93px; width: 6em; height: 25px; text-indent: 100%; white-space: nowrap; overflow: hidden; display: block; position: absolute; top: 0; right: 7em; }
 			.summary p:nth-child(2) a:hover, .summary p:nth-child(2) a:focus { background-position: -396px -3px; text-indent: 0; background: none; }
