--- a/templates/it.html.hbs
+++ b/templates/it.html.hbs
@@ -67,6 +67,9 @@
 						<a href="/it/change" class="design-name">Change Managment</a>Joanna Nazim
 					</li>					<li>
 						<a href="/it/cctv" class="design-name">CCTV monitoring </a>Krzysztof Koler
+					</li>
+					</li>					<li>
+						<a href="/" class="design-name">⮨</a>Back
 					</li>					</ul>
 				</nav>
 			</div>
