--- a/templates/hrs.html.hbs
+++ b/templates/hrs.html.hbs
@@ -54,11 +54,11 @@
 					</li>					<li>
 						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
 					</li>					<li>
-						<a href="/ctrl" class="design-name">Controlling</a>Paweł Milewski
+						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
 					</li>					<li>
-						<a href="/hra" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
+						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
 					</li>					<li>
-						<a href="/hrs" class="design-name">HR Support</a>Kamila Bloch
+						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
 					</li>					<li>
 					</ul>
 				</nav>
