--- a/templates/acp.html.hbs
+++ b/templates/acp.html.hbs
@@ -47,22 +47,16 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ac/ap" class="design-name">Accounts Payable</a>Oliwia Kuberska
+						<a href="/ac/ap/dk" class="design-name">AP DK</a>Anna Misior
 					</li>
 					<li>
-						<a href="/ac/ar" class="design-name">Accounts Receivable</a>Paweł Strzelec
+						<a href="/ac/ap/ndk" class="design-name">AP nonDK</a>Justyna Kowalczyk
 					</li>
 					<li>
-						<a href="/ac/p2p" class="design-name">P2P CoE</a>Paweł Milewski
-					</li>
+						<a href="/ac/ap/c" class="design-name">AP Communication</a>Oliwia Kuberska
+					</li>				
 					<li>
-						<a href="/ac/gl" class="design-name">General Ledger</a>Paweł Strzelec
-					</li>										
-					<li>
-						<a href="/ac/csde" class="design-name">Customer Service DE</a>Paweł Strzelec
-					</li>					
-					<li>
-						<a href="/" class="design-name">⮨</a>Back
+						<a href="/ac/index" class="design-name">⮨</a>Back
 					</li>
 						</ul>
 				</nav>
