--- a/templates/ctrl.html.hbs
+++ b/templates/ctrl.html.hbs
@@ -47,36 +47,15 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
+						<a href="/ctrl/ff" class="design-name">FF/SA/CA/Logistics</a>Anna Kołacka
 					</li>
 					<li>
-						<a href="/md/index" class="design-name">Master Data</a>Damian Leszczyński
-					</li>					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
-					</li>					<li>
-						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
-					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
-					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
-					</li>					<li>
-					</ul>
-				</nav>
-			</div>
-      
-			<div class="design-archives" id="design-archives">
-				<h3 class="archives">Archives:</h3>
-				<nav role="navigation">
-					<ul>
-						<li class="next">
-							<a href="/220/page1">
-								Next Designs <span class="indicator">&rsaquo;</span>
-							</a>
-						</li>
-						<li class="viewall">
-							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-								View All Designs							</a>
-						</li>
+						<a href="/ctrl/fp" class="design-name">FP&A/CF/NF/IT/Capex</a>Kamil Radziemski
+					</li>
+					<li>
+						<a href="/" class="design-name">⮨</a>Back
+					</li>
+									
 					</ul>
 				</nav>
 			</div>
