--- a/templates/hr.html.hbs
+++ b/templates/hr.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Accounting</title>
+	<title>HR Administration</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>IT Support</h1>
+			<h1>HR Administration</h1>
 		</header>
 
     
@@ -47,27 +47,34 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ac/ap" class="design-name">Accounts Payable</a>Oliwia Kuberska
+						<a href="/hr/hrs" class="design-name">HR Support</a>Natalia Grzegory
 					</li>
 					<li>
-						<a href="/ac/ar" class="design-name">Accounts Receivable</a>Paweł Strzelec
-					</li>
-					<li>
-						<a href="/ac/p2p" class="design-name">P2P CoE</a>Paweł Milewski
-					</li>
-					<li>
-						<a href="/ac/gl" class="design-name">General Ledger</a>Paweł Strzelec
-					</li>										
-					<li>
-						<a href="/ac/csde" class="design-name">Customer Service DE</a>Paweł Strzelec
-					</li>					
+						<a href="/hr/hra" class="design-name">HR & Administration</a>Natalia Grzegory
+					</li>	
 					<li>
 						<a href="/" class="design-name">⮨</a>Back
-					</li>
-						</ul>
+					</li>				
+					</ul>
 				</nav>
 			</div>
       
+			<div class="design-archives" id="design-archives">
+				<h3 class="archives">Archives:</h3>
+				<nav role="navigation">
+					<ul>
+						<li class="next">
+							<a href="/220/page1">
+								Next Designs <span class="indicator">&rsaquo;</span>
+							</a>
+						</li>
+						<li class="viewall">
+							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
+								View All Designs							</a>
+						</li>
+					</ul>
+				</nav>
+			</div>
 
 			
 		</div>
