--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -48,18 +48,22 @@
 				<nav role="navigation">
 					<ul>
 					<li>
+						<a href="/ac/index" class="design-name">Accounting</a>Bez menadżera
+					</li>
+					<li>
 						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
 					</li>
 					<li>
-						<a href="/md/index" class="design-name">Master Data</a>Damian Leszczyński
-					</li>					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
-					</li>					<li>
+						<a href="/md/index" class="design-name">Master Data</a>Damian Sławomir Leszczyński
+					</li>								
+					<li>
 						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
-					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
-					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
+					</li>					
+					<li>
+						<a href="/hr/index" class="design-name">HR Support & HR Administration</a>Marta Jarzyna-Krawczyk
+					</li>					
+					<li>
+						<a href="/payroll/index" class="design-name">Payroll </a>Marta Jarzyna-Krawczyk
 					</li>					
 					</ul>
 				</nav>
