--- a/templates/it.html.hbs
+++ b/templates/it.html.hbs
@@ -47,28 +47,36 @@
 				<nav role="navigation">
 					<ul>
 					<li>
+						<a href="/it/sd" class="design-name">Service Desk</a>Joanna Nazim
+					</li>
+					<li>
+						<a href="/it/change" class="design-name">Change Managment</a>Joanna Nazim
+					</li>
+					<li>
+						<a href="/it/mon" class="design-name">Monitoring</a>Wojciech Niewczas
+					</li>
+					<li>
+						<a href="/it/npl" class="design-name">Netto PL support</a>Wojciech Niewczas
+					</li>
+					<li>
+						<a href="/it/desktop" class="design-name">Desktop Managment</a>Tomasz Nowak
+					</li>
+					<li>
+						<a href="/it/rpa" class="design-name">Robotic Process Automation</a>Tomasz Nowak
+					</li>
+					<li>
 						<a href="/it/eco" class="design-name">Platform and Cloud Operation</a>Rafał Domagalski
 					</li>
 					<li>
 						<a href="/it/application" class="design-name">Application Support</a>Rafał Domagalski
-					</li>					<li>
-						<a href="/it/desktop" class="design-name">Desktop Managment</a>Tomasz Nowak
-					</li>					<li>
-						<a href="/it/sd" class="design-name">Service Desk</a>Joanna Nazim
-					</li>					<li>
-						<a href="/it/mon" class="design-name">Monitoring</a>Wojciech Niewczas
-					</li>					<li>
+					</li>															
+					<li>
 						<a href="/it/bi" class="design-name">Bussines inteligence support</a>Krzysztof Koler
-					</li>					<li>
-						<a href="/it/npl" class="design-name">Netto PL support</a>Wojciech Niewczas
-					</li>					<li>
-						<a href="/it/rpa" class="design-name">RPA</a>Tomasz Nowak
-					</li>					<li>
-						<a href="/it/change" class="design-name">Change Managment</a>Joanna Nazim
-					</li>					<li>
+					</li>																				
+					<li>
 						<a href="/it/cctv" class="design-name">CCTV monitoring </a>Krzysztof Koler
-					</li>
-					</li>					<li>
+					</li>					
+					<li>
 						<a href="/" class="design-name">⮨</a>Back
 					</li>					</ul>
 				</nav>
