--- a/templates/payroll.html.hbs
+++ b/templates/payroll.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Accounting</title>
+	<title>HR Administration</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>IT Support</h1>
+			<h1>HR Administration</h1>
 		</header>
 
     
@@ -47,24 +47,12 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ac/ap" class="design-name">Accounts Payable</a>Oliwia Kuberska
+						<a href="/payroll/pl" class="design-name">Payroll</a>Anna Kowalewska <br> Katarzyna Wabiszewicz
 					</li>
-					<li>
-						<a href="/ac/ar" class="design-name">Accounts Receivable</a>Paweł Strzelec
-					</li>
-					<li>
-						<a href="/ac/p2p" class="design-name">P2P CoE</a>Paweł Milewski
-					</li>
-					<li>
-						<a href="/ac/gl" class="design-name">General Ledger</a>Paweł Strzelec
-					</li>										
-					<li>
-						<a href="/ac/csde" class="design-name">Customer Service DE</a>Paweł Strzelec
-					</li>					
 					<li>
 						<a href="/" class="design-name">⮨</a>Back
-					</li>
-						</ul>
+					</li>				
+					</ul>
 				</nav>
 			</div>
       
