--- a/templates/acr.html.hbs
+++ b/templates/acr.html.hbs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>HR Administration</title>
+	<title>Accounting</title>
 
 	<link rel="stylesheet" media="screen" href="style.css">
 
@@ -25,7 +25,7 @@
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
-			<h1>HR Administration</h1>
+			<h1>IT Support</h1>
 		</header>
 
     
@@ -47,39 +47,15 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
-					</li>
+						<a href="/ac/ar" class="design-name">AR</a>Wiktoria Brewka
+					</li>			
 					<li>
-						<a href="/md/index" class="design-name">Master Data</a>Damian Leszczyński
-					</li>					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk
-					</li>					<li>
-						<a href="/ctrl/index" class="design-name">Controlling</a>Paweł Milewski
-					</li>					<li>
-						<a href="/hra/index" class="design-name">HR and Administration</a>Marta Jarzyna-Krawczyk
-					</li>					<li>
-						<a href="/hrs/index" class="design-name">HR Support</a>Kamila Bloch
-					</li>					<li>
-					</ul>
+						<a href="/ac/index" class="design-name">⮨</a>Back
+					</li>
+						</ul>
 				</nav>
 			</div>
       
-			<div class="design-archives" id="design-archives">
-				<h3 class="archives">Archives:</h3>
-				<nav role="navigation">
-					<ul>
-						<li class="next">
-							<a href="/220/page1">
-								Next Designs <span class="indicator">&rsaquo;</span>
-							</a>
-						</li>
-						<li class="viewall">
-							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-								View All Designs							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
 
 			
 		</div>
