--- a/templates/index.html.hbs
+++ b/templates/index.html.hbs
@@ -48,7 +48,7 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ac/index" class="design-name">Accounting</a>Bez menadżera
+						<a href="/ac/index" class="design-name">Accounting</a>Justyna Tkaczyk<br>Paweł Strzelec<br>Paweł Milewski 
 					</li>
 					<li>
 						<a href="/it/index" class="design-name">IT support</a>Krzysztof Koler
