--- a/static/ac/ap/style.css
+++ b/static/ac/ap/style.css
@@ -1,6 +1,6 @@
 * { margin: 0; padding: 0; }
 html { font-size: 62.5%; } /* for rems */
-body { font-family: Helvetica, Arial, sans-serif; color: #333; background: #CACCD5 no-repeat 50% 350px; }
+body { font-family: Helvetica, Arial, sans-serif; color: #333; background: #e8ecf0 no-repeat 50% 350px; }
 
 
 /* block level */
@@ -143,7 +143,7 @@ sub, sup { line-height: 0; }
 /*-------------------------------------------    
 	Banner
 -------------------------------------------*/
-[role="banner"] h1 { padding: 1em 0 0; text-transform: uppercase; letter-spacing: 0.1em; font-size: 3.5rem; font-weight: 900; color: #133F4F; visibility: hidden; }
+[role="banner"] h1 { padding: 1em 0 0; text-transform: uppercase; letter-spacing: 0.1em; font-size: 3.5rem; font-weight: 900; color: #182e4f; visibility: hidden; }
 [role="banner"] h1:before { content: "Salling Group Pathfinder"; visibility: visible; display: block; }
 [role="banner"] h1:after { content: "In SSC"; visibility: visible; display: block; color: #aaa; letter-spacing: 0.5em; font-size: 1.4rem; font-weight: normal; margin: 0.5em 0 3em; color: rgba(24, 46, 79, 0.4); }
 
@@ -180,7 +180,7 @@ sub, sup { line-height: 0; }
 /*-------------------------------------------    
 	Benefits
 -------------------------------------------*/
-.benefits { visibility: visible; display: block; color: #aaa;  font-size: 1.6rem; font-weight: normal; margin: 0.5em 0 3em; color: #7DB6D1; font-weight: bold; }
+.benefits { visibility: visible; display: block; color: #aaa;  font-size: 1.6rem; font-weight: normal; margin: 0.5em 0 3em; color: rgba(24, 46, 79, 0.4); }
 
 
 /*-------------------------------------------    
@@ -207,7 +207,7 @@ sub, sup { line-height: 0; }
 			.designer-name:after, footer a:after { height: 1px; }
 
 
-.select:after { content: "Departments& managers"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: transparent no-repeat 50% 0; padding: 2em 0 0; color: #133F4F; visibility: visible; }
+.select:after { content: "Departments& managers"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: transparent no-repeat 50% 0; padding: 2em 0 0; color: #182e4f; visibility: visible; }
 
 .archives, .resources { position: absolute; left: -9999px;  }
 
