--- a/static/ctrl/style.css
+++ b/static/ctrl/style.css
@@ -207,7 +207,7 @@ sub, sup { line-height: 0; }
 			.designer-name:after, footer a:after { height: 1px; }
 
 
-.select:after { content: "Teams & managers"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: transparent no-repeat 50% 0; padding: 2em 0 0; color: #182e4f; visibility: visible; }
+.select:after { content: "Teams & team leaders"; font-size: 1.8rem; text-align: center; width: 7em; margin: 0 auto 2em; background: transparent no-repeat 50% 0; padding: 2em 0 0; color: #182e4f; visibility: visible; }
 
 .archives, .resources { position: absolute; left: -9999px;  }
 
