--- a/templates/ac.html.hbs
+++ b/templates/ac.html.hbs
@@ -47,7 +47,7 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ac/ap" class="design-name">Accounts Payable</a>Oliwia Kuberska
+						<a href="/ac/ap" class="design-name">Accounts Payable</a>Justyna Tkaczyk
 					</li>
 					<li>
 						<a href="/ac/ar" class="design-name">Accounts Receivable</a>Paweł Strzelec
