--- a/templates/payroll.html.hbs
+++ b/templates/payroll.html.hbs
@@ -47,7 +47,7 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/payroll/pl" class="design-name">Payroll</a>Anna Kowalewska <br> Katarzyna Wabiszewicz
+						<a href="/payroll/index" class="design-name">Payroll</a>Anna Kowalewska <br> Katarzyna Wabiszewicz
 					</li>
 					<li>
 						<a href="/" class="design-name">⮨</a>Back
