--- a/templates/it.html.hbs
+++ b/templates/it.html.hbs
@@ -62,13 +62,10 @@
 						<a href="/it/desktop" class="design-name">Desktop Managment</a>Tomasz Nowak
 					</li>
 					<li>
-						<a href="/it/rpa" class="design-name">Robotic Process Automation</a>Tomasz Nowak
+						<a href="/it/rpa" class="design-name">Automation</a>Tomasz Nowak
 					</li>
 					<li>
 						<a href="/it/eco" class="design-name">Platform and Cloud Operation</a>Rafał Domagalski
-					</li>
-					<li>
-						<a href="/it/application" class="design-name">Application Support</a>Rafał Domagalski
 					</li>															
 					<li>
 						<a href="/it/bi" class="design-name">Bussines inteligence support</a>Krzysztof Koler
