--- a/templates/ctrl.html.hbs
+++ b/templates/ctrl.html.hbs
@@ -32,6 +32,12 @@
     <div class="benefits" role="article">
 		{{ job_description }}
 		</div>
+		<div class="benefits" role="article">
+		{{ job_1 }}
+		</div>
+		<div class="benefits" role="article">
+		{{ job_2 }}
+		</div>
 		<footer>
       
 		</footer>
@@ -47,10 +53,7 @@
 				<nav role="navigation">
 					<ul>
 					<li>
-						<a href="/ctrl/ff" class="design-name">FF/SA/CA/Logistics</a>Anna Kołacka
-					</li>
-					<li>
-						<a href="/ctrl/fp" class="design-name">FP&A/CF/NF/IT/Capex</a>Kamil Radziemski
+						<a href="/ctrl/index" class="design-name">Controlling</a>Anna Kołacka<br>Kamil Radziemski
 					</li>
 					<li>
 						<a href="/" class="design-name">⮨</a>Back
