--- a/templates/payroll.html.hbs
+++ b/templates/payroll.html.hbs
@@ -32,6 +32,12 @@
     <div class="benefits" role="article">
 		{{ job_description }}
 		</div>
+		<div class="benefits" role="article">
+		{{ job_1}}
+		</div>
+		<div class="benefits" role="article">
+		{{ job_2 }}
+		</div>
 		<footer>
       
 		</footer>
