--- a/templates/hr.html.hbs
+++ b/templates/hr.html.hbs
@@ -22,6 +22,13 @@
 
 <body id="css-zen-garden">
 <div class="page-wrapper">
+	<div class="right">
+		 <img src="../images/Agile.png" class="img" alt="Agile" width="auto" height="auto" > 
+		 <img src="../images/Competitive.png" class="img" alt="Competitive" width="auto" height="auto">
+		 <img src="../images/Efficient.png" class="img" alt="Efficient" width="auto" height="auto" style="padding-left:20px">
+		 <img src="../images/Integrity.png" class="img" alt="Integrity" width="auto" height="auto">
+		 <img src="../images/Passionate.png" class="img" alt="Passionate" width="auto" height="auto" style="padding-left:20px">    		 		
+	</div>
 
 	<section class="intro" id="zen-intro">
 		<header role="banner">
@@ -59,23 +66,6 @@
 				</nav>
 			</div>
       
-			<div class="design-archives" id="design-archives">
-				<h3 class="archives">Archives:</h3>
-				<nav role="navigation">
-					<ul>
-						<li class="next">
-							<a href="/220/page1">
-								Next Designs <span class="indicator">&rsaquo;</span>
-							</a>
-						</li>
-						<li class="viewall">
-							<a href="http://www.mezzoblue.com/zengarden/alldesigns/" title="View every submission to the Zen Garden.">
-								View All Designs							</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-
 			
 		</div>
 	</aside>
@@ -83,9 +73,6 @@
 
 </div>
 
-
-<div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
-<div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
 
 </body>
 </html>
