--- a/templates/md.html.hbs
+++ b/templates/md.html.hbs
@@ -23,14 +23,28 @@
 <body id="css-zen-garden">
 <div class="page-wrapper">
 
+	<div class="right">
+		 <img src="../images/Agile.png" class="img" alt="Agile" width="auto" height="auto" > 
+		 <img src="../images/Competitive.png" class="img" alt="Competitive" width="auto" height="auto">
+		 <img src="../images/Efficient.png" class="img" alt="Efficient" width="auto" height="auto" style="padding-left:20px">
+		 <img src="../images/Integrity.png" class="img" alt="Integrity" width="auto" height="auto">
+		 <img src="../images/Passionate.png" class="img" alt="Passionate" width="auto" height="auto" style="padding-left:20px">    		
+	</div>
+
+
 	<section class="intro" id="zen-intro">
 		<header role="banner">
 			<h1>Master Data</h1>
 		</header>
 
+	
+
     
     <div class="benefits" role="article">
 		{{ job_description }}
+		</div>
+		<div class="benefits" role="article">
+		{{ job_1 }}
 		</div>
 		<footer>
       
@@ -66,13 +80,12 @@
 			
 		</div>
 	</aside>
-
+	
 
 </div>
+	
 
 
-<div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
-<div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
 
 </body>
 </html>
